--- a/sass/index.html
+++ b/sass/index.html
@@ -9,19 +9,27 @@
 <body>
     <h1>Aprendiendo SASS</h1>
     <p>SASS es un preprocesador muy popular y potente</p>
-    <div class="caja">
-        <h1>Soy una caja</h1>
-        <p>Soy un parrafo</p>
-        <div class="info">
-            <p>[06-06-2020]</p>
+    <section id="layout">
+        <div class="caja red">
+            <p>Primera caja</p>
         </div>
-    </div>
+        <div class="caja green">
+            <p>Segunda caja</p>
+        </div>
+        <div class="caja blue">
+            <p>Tercera caja</p>
+        </div>
+        <div class="caja orange">
+            <p>Cuarta caja</p>
+        </div>
+    
+    </section>
 
     <div class="listado">
         <ul>
-            <li>SASS</li>
-            <li>LESS</li>
-            <li>Staylus</li>
+            <li><a href="#">SASS</a></li>
+            <li><a href="#">LESS</a></li>
+            <li><a href="#">Staylus</a></li>
         </ul>
     </div>
 
@@ -36,7 +44,5 @@
     <div class="alerta-exito">
         <p>Soy una alerta Exito</p>
     </div>
-
-    <p>holii</p>
 </body>
 </html>
